--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,35 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
+  flutter: '^3.16.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
+  freezed_annotation: ^2.0.0
+  json_annotation: ^4.8.1
+  riverpod_annotation: ^2.0.0
+
+  flutter_riverpod: ^2.0.0
+  flex_color_picker: ^3.0.0
+  gap: ^3.0.0
+  go_router: ^13.0.0
+  shared_preferences: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
+  riverpod_lint: ^2.0.0
+  custom_lint: ^0.6.0
+
+  build_runner: ^2.0.0
+  freezed: ^2.0.0
+  json_serializable: ^6.7.0
+  riverpod_generator: ^2.0.0
+  go_router_builder: ^2.0.0
 
 flutter:
   uses-material-design: true
